--- a/component/login/login.module.css
+++ b/component/login/login.module.css
@@ -1,3 +1,6 @@
-.login-form-container {
-    display: flex;
+.login-user {
+    background: rgb(11, 16, 67);
+    width:100%;
+    height:100%;
+    border: 1px solid red;
 }
